--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                             <div id="active-certs" class="accordion-collapse collapse" aria-labelledby="active-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
+                                        <li><strong>Certified Argo Project Associate</strong><br>February 27, 2025 - February 28, 2027</li>
                                         <li><strong>Palo Alto Networks Certified Cybersecurity Apprentice</strong><br>February 2, 2025 - February 2, 2027</li>
                                         <li><strong>FinOps Certified Practitioner</strong><br>January 26, 2025 - January 26, 2027</li>
                                         <li><strong>Certified Associate in Software Testing (CAST)</strong><br>December 7, 2024 - December 7, 2027</li>
