Added 2 CompTIA certifications.

--- a/index.html
+++ b/index.html
@@ -229,11 +229,13 @@
                                         <li>CPA - C++ Certified Associate Programmer</li>
                                         <li>CPE - C++ Certified Entry-Level Programmer</li>
                                         <li>CompTIA Cloud Essentials+</li>
+                                        <li>CompTIA IT Fundamentals (ITF+)</li>
                                         <li>CompTIA Linux+ Powered by LPI</li>
                                         <li>CompTIA Mobility+</li>
                                         <li>CompTIA Project+</li>
                                         <li>CompTIA Server+</li>
                                         <li>CompTIA Storage+ Powered by SNIA</li>
+                                        <li>CompTIA Tech+</li>
                                         <li>Critical Career Skills - Generative AI Foundations</li>
                                         <li>EXIN Secure Programming Foundation</li>
                                         <li>Flutter Certified Application Developer</li>
