Updated certification expenses spreadsheet and charts.

--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
                                         <li>Oracle Certified Professional: Java SE 11 Developer</li>
                                         <li>Oracle Certified Professional: Java SE 17 Developer</li>
                                         <li>PCAP - Certified Associate in Python Programming</li>
+                                        <li>PCED - Certified Entry-Level Data Analyst with Python</li>
                                         <li>Software Development Skills Essentials - Intro to Web Programming</li>
                                         <li>Software Development Skills Foundation (Java)</li>
                                         <li>Software Development Skills Foundation (JavaScript)</li>
