Added "SC101: Open Data Formats YAML" certification!

--- a/index.html
+++ b/index.html
@@ -296,10 +296,11 @@
                                         <li>Oracle Certified Professional: Java SE 17 Developer</li>
                                         <li>PCAP - Certified Associate in Python Programming</li>
                                         <li>PCED - Certified Entry-Level Data Analyst with Python</li>
+                                        <li>SC101: Open Data Formats YAML</li>
+                                        <li>SC102: Source Control Management with Git</li>
                                         <li>Software Development Skills Essentials - Intro to Web Programming</li>
                                         <li>Software Development Skills Foundation (Java)</li>
                                         <li>Software Development Skills Foundation (JavaScript)</li>
-                                        <li>Source Control Management with Git (SC102)</li>
                                         <li>Spring Certified Professional 2022 (EDU-1202)</li>
                                         <li>WDE - Certified Entry-Level Web Developer</li>
                                     </ol>
