--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="files/BJDelaCruz_resume.pdf" target="_blank"><i class="far fa-file-pdf"></i> Résumé</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://dev-bjdelacruz-certifications.s3.us-west-2.amazonaws.com/certifications.pdf" target="_blank"><i class="far fa-file-pdf"></i> Certificates</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://dev-bjdelacruz.s3.us-west-2.amazonaws.com/certifications.pdf" target="_blank"><i class="far fa-file-pdf"></i> Certificates</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Social</a>
                             <div class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDropdown">
