Added SC107: Pattern Matching with Regular Expressions to certification expenses spreadsheet.

--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
                                         <li>PCED - Certified Entry-Level Data Analyst with Python</li>
                                         <li>SC101: Open Data Formats YAML</li>
                                         <li>SC102: Source Control Management with Git</li>
+                                        <li>SC107: Pattern Matching with Regular Expressions</li>
                                         <li>Software Development Skills Essentials - Intro to Web Programming</li>
                                         <li>Software Development Skills Foundation (Java)</li>
                                         <li>Software Development Skills Foundation (JavaScript)</li>
