Updated certification expenses spreadsheet.

--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
                                         <li>Microsoft Office Specialist: Word Associate (Office 2019)</li>
                                         <li>Microsoft Office Specialist: Word Expert (Microsoft 365 Apps)</li>
                                         <li>Microsoft Office Specialist: Word Expert (Office 2019)</li>
+                                        <li>Oracle APEX Cloud Developer Certified Professional</li>
                                         <li>Oracle Certified Expert, Java EE 6 JPA Developer</li>
                                         <li>Oracle Certified Foundations Associate, Database</li>
                                         <li>Oracle Certified Master, Java EE 6 Developer</li>
